# sandbox-mcp-server

./: .env.example  .gitignore  Dockerfile  README.md  fastmcp.json  pyproject.toml  requirements.txt  swagger.yaml
.github/workflows/: deploy_mcp_docker.yml
src/sandbox_api_mcp_server/: __init__.py  auth.py  auth_provider.py  helpers.py  models.py  server.py
src/sandbox_api_mcp_server/sandbox/: models.py  routes.py  service.py
