[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
packages = ["src/sandbox_api_mcp_server"]

[project]
name = "sandbox-api-mcp-server"
version = "0.1.0"
description = "Sandbox API tool for FastMCP"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Rafal Janicki", email = "rafal.janicki@neo4j.com" }
]
dependencies = [
    "fastmcp>=2.5.1",
    "python-dotenv>=1.1.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.4",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
sandbox-api-mcp-server = "sandbox_api_mcp_server:server.run"